--- a/01_instargram/styles/header.css
+++ b/01_instargram/styles/header.css
@@ -2,14 +2,14 @@
 .header {
   width: 100%;
   height: 44px;
-  background-color: #ffffff;
+  background-color: var(--primary);
   display: flex;
   justify-content: center; /* 모든 요소를 가운데 정렬 */
   position: fixed; /**/
   top: 0;
   left: 0;
   z-index: 2;
-  border-bottom: 1px solid #dbdbdb; /* 테두리 아랫값 회색 지정 */
+  border-bottom: 1px solid var(--story-border); /* 테두리 아랫값 회색 지정 */
 }
 
 .header__content {
@@ -45,22 +45,23 @@
 .header__search input {
   width: 100%;
   height: 100%;
-  background-color: #fafafa;
+  background-color: var(--primary);
   padding: 4px 10px 4px 28px;
-  border: 1px solid #dbdbdb;
+  border: 1px solid var(--story-border);
   border-radius: 4px;
   outline: none; /* 마우스 스크롤 커서 선택시 아웃라인 없애기 */
   font-size: 12px;
   font-weight: 300;
   text-decoration: none;
-  color: #999999;
+  color: var(--text-light);
   text-overflow: ellipsis; /*넌 뭔 뜻이야 */
   overflow: hidden; /*넘치는 것 안보이게 */
   white-space: nowrap; /* 얘는 뭘 준거야?  */
 }
 
 .header__search input:focus {
-  color: #262626; /* 진한 회색으로 글자가 입력되는 것 확인, 커서가 떠나면 글자색은 원래 지정색으로 돌아옴. */
+  color: var(--text-dark);
+  /* 진한 회색으로 글자가 입력되는 것 확인, 커서가 떠나면 글자색은 원래 지정색으로 돌아옴. */
 }
 
 .header__buttons {
@@ -74,6 +75,29 @@
   width: 24px;
   height: 24px;
   border-radius: 50%;
+}
+
+/* 테마 토글 버튼 */
+.header__theme-button {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+.header__theme-button-sun {
+  display: none;
+}
+
+.header__theme-button-moon {
+  display: unset;
+}
+
+:root.darkTheme .header__theme-button-sun {
+  display: unset;
+}
+
+:root.darkTheme .header__theme-button-moon {
+  display: none;
 }
 
 @media (min-width: 768px) {
