--- a/01_instargram/styles/main.css
+++ b/01_instargram/styles/main.css
@@ -1,5 +1,5 @@
 .main-container {
-  background-color: #ffffff;
+  background-color: var(--primary);
   margin-top: 44px;
   margin-bottom: 44px;
   display: flex;
@@ -23,7 +23,7 @@
 
 .stories {
   width: 100%;
-  background-color: #ffffff;
+  background-color: var(--primary);
   padding: 16px 0;
   position: relative;
   overflow: hidden;
@@ -35,7 +35,7 @@
   bottom: 0;
   width: 100%;
   height: 1px;
-  background-color: #dbdbdb;
+  background-color: var(--sceondary);
 }
 
 .posts {
@@ -62,7 +62,7 @@
   width: 64px;
   height: 64px;
   fill: none;
-  stroke: #c7c7c7;
+  stroke: var(--story-border);
   stroke-width: 1.5;
 }
 
@@ -84,6 +84,7 @@
   font-size: 12px;
   font-weight: 400;
   color: var(--text-light);
+  text-transform: lowercase;
   max-width: 72px;
   text-overflow: ellipsis;
   overflow: hidden;
@@ -115,8 +116,8 @@
 }
 
 .post__header {
-  background-color: #ffffff;
-  border-bottom: 1px solid #dbdbdb;
+  background-color: var(--primary);
+  border-bottom: 1px solid var(--story-border);
 
   display: flex;
   justify-content: space-between;
@@ -179,7 +180,7 @@
 }
 
 .post__footer {
-  background-color: #ffffff;
+  background-color: var(--primary);
   display: flex;
   flex-direction: column;
   gap: 4px;
@@ -232,14 +233,14 @@
 .post__description span {
   font-size: 14px;
   font-weight: 400;
-  color: #262626;
+  color: var(--text-dark);
 }
 
 .post__likes a,
 .post__description a {
   font-size: 14px;
   font-weight: 500;
-  color: #262626;
+  color: var(--text-dark);
   text-decoration: none;
 }
 
@@ -250,7 +251,7 @@
 .post__date-time {
   font-size: 10px;
   font-weight: 400;
-  color: #999999;
+  color: var(--text-light);
   text-transform: uppercase; /* 대문자로만 표현 */
 }
 
@@ -263,7 +264,7 @@
     gap: 24px;
   }
   .stories {
-    border: 1px solid #dbdbdb;
+    border: 1px solid var(--story-border);
     border-radius: 4px;
   }
   .posts {
@@ -273,7 +274,7 @@
 
 @media (min-width: 1024px) {
   .main-container {
-    background-color: #fafafa;
+    background-color: var(--primary);
   }
   .content {
     margin: unset; /* 초기값 또는 상속값으로 되돌리기 */
@@ -283,12 +284,13 @@
 @media (min-width: 620px) {
   .content-container {
     padding: 30px 0 24px;
+    background-color: var(--primary);
   }
   .content {
     gap: 24px;
   }
   .stories {
-    border: 1px solid #dbdbdb;
+    border: 1px solid var(--story-border);
     border-radius: 4px;
   }
   .stories::after {
@@ -298,7 +300,7 @@
     gap: 24px;
   }
   .post {
-    border: 1px solid #dbdbdb;
+    border: 1px solid var(--story-border);
     border-radius: 4px;
   }
   .post__footer {
