--- a/01_instargram/styles/side.css
+++ b/01_instargram/styles/side.css
@@ -35,7 +35,7 @@
 .side-menu__user-info a {
   font-size: 14px;
   font-weight: 500;
-  color: #262626;
+  color: var(--text-dark);
   text-decoration: none;
   text-transform: lowercase; /*소문자*/
   max-width: 180px;
@@ -47,7 +47,7 @@
 .side-menu__user-info span {
   font-size: 14px;
   font-weight: 400;
-  color: #999999;
+  color: var(--text-light);
   max-width: 180px;
   text-overflow: ellipsis;
   overflow: hidden;
@@ -60,7 +60,7 @@
   cursor: pointer;
   font-size: 12px;
   font-weight: 500;
-  color: #0093f5;
+  color: var(--blue);
 }
 
 .side-menu__suggestions-section {
@@ -76,7 +76,7 @@
 .side-menu__suggestions-header h2 {
   font-size: 14px;
   font-weight: 500;
-  color: #999999;
+  color: var(--text-light);
 }
 
 .side-menu__suggestions-header button {
@@ -85,7 +85,7 @@
   cursor: pointer;
   font-size: 12px;
   font-weight: 500;
-  color: #262626;
+  color: var(--text-dark);
 }
 
 .side-menu__suggestion-content {
@@ -138,7 +138,7 @@
 .side-menu__suggestion-info span {
   font-size: 14px;
   font-weight: 400;
-  color: #999999;
+  color: var(--text-light);
   max-width: 180px;
   text-overflow: ellipsis;
   overflow: hidden;
@@ -151,7 +151,7 @@
   cursor: pointer;
   font-size: 12px;
   font-weight: 500;
-  color: #0093f5;
+  color: var(--blue);
   flex-shrink: 0;
 }
 
@@ -184,15 +184,18 @@
 .side-menu__footer-copyright {
   font-size: 11px;
   font-weight: 400;
-  color: #999999;
+  color: var(--text-light);
   text-decoration: none;
 }
 
 .side-menu__footer-copyright {
-  text-transform: uppercase;
+  text-transform: uppercase; /* 전부 대문자료 표시 */
 }
 
-/* 사이드 프로파일 버튼  */
+/* 사이드 프로필 버튼  */
+
+.profile__button {
+}
 
 @media (min-width: 1024px) {
   .side-menu {
